-- =============================================================================
-- Capa de datos para un copiloto RAG interno de una distribuidora mayorista
-- 01_schema.sql - Modelo físico: tablas, claves y restricciones
-- =============================================================================
--
-- Orden de ejecución:
--   01_schema.sql      (este archivo)
--   02_seed.sql        (db/datos/)
--   03_indices.sql     (db/indices_vistas/)
--   04_consultas.sql   (db/consultas/)
--
-- Convenciones:
--   - Nombres snake_case en español.
--   - Claves internas BIGINT GENERATED BY DEFAULT AS IDENTITY.
--   - Códigos de negocio únicos y estables, usados como oráculo en las pruebas.
--   - Instantes en TIMESTAMPTZ; importes y porcentajes en NUMERIC explícito.
--   - Historial protegido con ON DELETE RESTRICT; los maestros se desactivan
--     con la columna `activo` en lugar de borrarse.
--   - Intervalos de vigencia semiabiertos: [vigente_desde, vigente_hasta).
--   - Los estados pequeños y cerrados se expresan con CHECK, no con catálogos.
-- =============================================================================

-- Fija la zona horaria de la sesión: sin esto, los TIMESTAMPTZ se muestran en
-- la zona local de quien ejecuta y los resultados dejarían de ser comparables
-- entre máquinas.
SET TIME ZONE 'UTC';

BEGIN;

-- `vector` habilita la búsqueda por similitud; `btree_gist` permite combinar
-- la igualdad de claves con el solapamiento de rangos en las restricciones de
-- exclusión (condicion_comercial y version_documental). Ambas están disponibles
-- en cualquier instalación estándar de PostgreSQL con contrib y pgvector.
CREATE EXTENSION IF NOT EXISTS vector;
CREATE EXTENSION IF NOT EXISTS btree_gist;


-- =============================================================================
-- 1. CATÁLOGOS
-- =============================================================================

CREATE TABLE categoria_producto (
    id      BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    codigo  TEXT    NOT NULL UNIQUE CHECK (btrim(codigo) <> ''),
    nombre  TEXT    NOT NULL        CHECK (btrim(nombre) <> ''),
    activo  BOOLEAN NOT NULL DEFAULT TRUE
);

COMMENT ON TABLE categoria_producto IS
    'Clasificación comercial de los productos del catálogo.';

CREATE TABLE segmento_cliente (
    id      BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    codigo  TEXT    NOT NULL UNIQUE CHECK (btrim(codigo) <> ''),
    nombre  TEXT    NOT NULL        CHECK (btrim(nombre) <> ''),
    activo  BOOLEAN NOT NULL DEFAULT TRUE
);

COMMENT ON TABLE segmento_cliente IS
    'Agrupación comercial de clientes usada en el análisis por segmento.';

CREATE TABLE perfil_autorizado (
    id      BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    codigo  TEXT    NOT NULL UNIQUE CHECK (btrim(codigo) <> ''),
    nombre  TEXT    NOT NULL        CHECK (btrim(nombre) <> ''),
    activo  BOOLEAN NOT NULL DEFAULT TRUE
);

COMMENT ON TABLE perfil_autorizado IS
    'Perfil funcional del que dependen los permisos: Operaciones/Logística, '
    'Comercial/Compras y Administración/Calidad. Un actor pertenece a uno solo.';

CREATE TABLE clase_documental (
    id           BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    codigo       TEXT    NOT NULL UNIQUE CHECK (btrim(codigo) <> ''),
    nombre       TEXT    NOT NULL        CHECK (btrim(nombre) <> ''),
    descripcion  TEXT,
    activo       BOOLEAN NOT NULL DEFAULT TRUE
);

COMMENT ON TABLE clase_documental IS
    'Clase del documento. Junto con el perfil determina el permiso de acceso.';

CREATE TABLE nivel_sensibilidad (
    id                BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    codigo            TEXT    NOT NULL UNIQUE CHECK (btrim(codigo) <> ''),
    nombre            TEXT    NOT NULL        CHECK (btrim(nombre) <> ''),
    requiere_auditoria BOOLEAN NOT NULL DEFAULT FALSE,
    activo            BOOLEAN NOT NULL DEFAULT TRUE
);

COMMENT ON TABLE nivel_sensibilidad IS
    'Sensibilidad del documento. Complementa la autorización pero NO la '
    'reemplaza: el permiso efectivo siempre surge de perfil x clase documental.';

CREATE TABLE modelo_embedding (
    id         BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nombre     TEXT    NOT NULL CHECK (btrim(nombre) <> ''),
    version    TEXT    NOT NULL CHECK (btrim(version) <> ''),
    dimension  INTEGER NOT NULL CHECK (dimension > 0),
    metrica    TEXT    NOT NULL CHECK (metrica IN ('coseno', 'euclidea', 'producto_interno')),
    activo     BOOLEAN NOT NULL DEFAULT TRUE,
    CONSTRAINT modelo_embedding_nombre_version_uk UNIQUE (nombre, version)
);

COMMENT ON TABLE modelo_embedding IS
    'Modelo que generó cada vector. Sólo el modelo activo participa en las '
    'búsquedas vigentes; los históricos se conservan para reconstruir evidencia.';


-- =============================================================================
-- 2. NÚCLEO OPERATIVO
-- =============================================================================

CREATE TABLE producto (
    id            BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    codigo        TEXT    NOT NULL UNIQUE CHECK (btrim(codigo) <> ''),
    nombre        TEXT    NOT NULL        CHECK (btrim(nombre) <> ''),
    descripcion   TEXT,
    categoria_id  BIGINT  NOT NULL REFERENCES categoria_producto (id) ON DELETE RESTRICT,
    activo        BOOLEAN NOT NULL DEFAULT TRUE
);

CREATE TABLE cliente (
    id           BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    codigo       TEXT    NOT NULL UNIQUE CHECK (btrim(codigo) <> ''),
    razon_social TEXT    NOT NULL        CHECK (btrim(razon_social) <> ''),
    segmento_id  BIGINT  NOT NULL REFERENCES segmento_cliente (id) ON DELETE RESTRICT,
    activo       BOOLEAN NOT NULL DEFAULT TRUE
);

CREATE TABLE proveedor (
    id           BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    codigo       TEXT    NOT NULL UNIQUE CHECK (btrim(codigo) <> ''),
    razon_social TEXT    NOT NULL        CHECK (btrim(razon_social) <> ''),
    activo       BOOLEAN NOT NULL DEFAULT TRUE
);

-- Asociación pura N:M con clave primaria compuesta.
CREATE TABLE producto_proveedor (
    producto_id   BIGINT NOT NULL REFERENCES producto  (id) ON DELETE RESTRICT,
    proveedor_id  BIGINT NOT NULL REFERENCES proveedor (id) ON DELETE RESTRICT,
    PRIMARY KEY (producto_id, proveedor_id)
);

COMMENT ON TABLE producto_proveedor IS
    'Qué proveedores abastecen cada producto. Relación opcional y sin duplicados.';

CREATE TABLE condicion_comercial (
    id                    BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    cliente_id            BIGINT NOT NULL REFERENCES cliente  (id) ON DELETE RESTRICT,
    producto_id           BIGINT NOT NULL REFERENCES producto (id) ON DELETE RESTRICT,
    precio_unitario       NUMERIC(12, 2) NOT NULL CHECK (precio_unitario >= 0),
    descuento_porcentaje  NUMERIC(5, 2)  NOT NULL DEFAULT 0
                          CHECK (descuento_porcentaje >= 0 AND descuento_porcentaje <= 100),
    vigente_desde         DATE NOT NULL,
    vigente_hasta         DATE,
    CONSTRAINT condicion_comercial_vigencia_ck
        CHECK (vigente_hasta IS NULL OR vigente_hasta > vigente_desde),
    -- Un mismo par cliente-producto no puede tener dos condiciones solapadas.
    -- Requiere btree_gist para combinar la igualdad de los BIGINT con el rango.
    CONSTRAINT condicion_comercial_sin_solape_ex EXCLUDE USING gist (
        cliente_id  WITH =,
        producto_id WITH =,
        daterange(vigente_desde, vigente_hasta, '[)') WITH &&
    )
);

COMMENT ON TABLE condicion_comercial IS
    'Precio y descuento pactados por cliente y producto, con historia. '
    'El intervalo es semiabierto: [vigente_desde, vigente_hasta).';

CREATE TABLE pedido (
    id          BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    codigo      TEXT   NOT NULL UNIQUE CHECK (btrim(codigo) <> ''),
    cliente_id  BIGINT NOT NULL REFERENCES cliente (id) ON DELETE RESTRICT,
    fecha       DATE   NOT NULL,
    estado      TEXT   NOT NULL
                CHECK (estado IN ('pendiente', 'en_preparacion', 'entregado', 'cancelado'))
);

COMMENT ON TABLE pedido IS
    'Un pedido pertenece a un cliente y debe tener al menos una línea. Esa '
    'condición se valida de forma atómica en la carga: no es expresable como '
    'restricción local sin diferir la integridad.';

CREATE TABLE linea_pedido (
    id                    BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    pedido_id             BIGINT  NOT NULL REFERENCES pedido   (id) ON DELETE RESTRICT,
    numero_linea          INTEGER NOT NULL CHECK (numero_linea > 0),
    producto_id           BIGINT  NOT NULL REFERENCES producto (id) ON DELETE RESTRICT,
    cantidad              INTEGER NOT NULL CHECK (cantidad > 0),
    -- Snapshots: conservan lo aplicado aunque después cambie la condición comercial.
    precio_unitario       NUMERIC(12, 2) NOT NULL CHECK (precio_unitario >= 0),
    descuento_porcentaje  NUMERIC(5, 2)  NOT NULL DEFAULT 0
                          CHECK (descuento_porcentaje >= 0 AND descuento_porcentaje <= 100),
    CONSTRAINT linea_pedido_numero_uk   UNIQUE (pedido_id, numero_linea),
    CONSTRAINT linea_pedido_producto_uk UNIQUE (pedido_id, producto_id)
);

COMMENT ON COLUMN linea_pedido.precio_unitario IS
    'Precio efectivamente aplicado al momento del pedido, no el vigente hoy.';

CREATE TABLE entrega (
    id                BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    codigo            TEXT   NOT NULL UNIQUE CHECK (btrim(codigo) <> ''),
    pedido_id         BIGINT NOT NULL REFERENCES pedido (id) ON DELETE RESTRICT,
    fecha_programada  DATE   NOT NULL,
    fecha_efectiva    DATE,
    estado            TEXT   NOT NULL
                      CHECK (estado IN ('planificada', 'en_transito', 'entregada',
                                        'demorada', 'cancelada')),
    CONSTRAINT entrega_fecha_efectiva_ck
        CHECK ((estado = 'entregada') = (fecha_efectiva IS NOT NULL))
);

COMMENT ON TABLE entrega IS
    'Una entrega pertenece a un pedido. Un pedido puede no tener entregas o '
    'tener varias (entregas parciales).';

CREATE TABLE incidencia_operativa (
    id           BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    codigo       TEXT   NOT NULL UNIQUE CHECK (btrim(codigo) <> ''),
    entrega_id   BIGINT NOT NULL REFERENCES entrega (id) ON DELETE RESTRICT,
    fecha        DATE   NOT NULL,
    tipo         TEXT   NOT NULL
                 CHECK (tipo IN ('demora', 'faltante', 'dano', 'direccion_erronea', 'otro')),
    descripcion  TEXT   NOT NULL CHECK (btrim(descripcion) <> ''),
    estado       TEXT   NOT NULL
                 CHECK (estado IN ('abierta', 'en_revision', 'cerrada'))
);

COMMENT ON TABLE incidencia_operativa IS
    'Una incidencia pertenece siempre a una entrega, nunca directamente a un pedido.';


-- =============================================================================
-- 3. NÚCLEO DOCUMENTAL Y VECTORIAL
-- =============================================================================

CREATE TABLE documento (
    id              BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    codigo          TEXT    NOT NULL UNIQUE CHECK (btrim(codigo) <> ''),
    titulo          TEXT    NOT NULL        CHECK (btrim(titulo) <> ''),
    clase_id        BIGINT  NOT NULL REFERENCES clase_documental   (id) ON DELETE RESTRICT,
    sensibilidad_id BIGINT  NOT NULL REFERENCES nivel_sensibilidad (id) ON DELETE RESTRICT,
    procedencia     TEXT    NOT NULL CHECK (btrim(procedencia) <> ''),
    activo          BOOLEAN NOT NULL DEFAULT TRUE
);

COMMENT ON COLUMN documento.procedencia IS
    'Origen declarado del documento (área responsable o fuente que lo aporta).';

CREATE TABLE version_documental (
    id             BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    documento_id   BIGINT  NOT NULL REFERENCES documento (id) ON DELETE RESTRICT,
    numero_version INTEGER NOT NULL CHECK (numero_version > 0),
    estado         TEXT    NOT NULL
                   CHECK (estado IN ('borrador', 'publicada', 'sustituida', 'revocada')),
    vigente_desde  TIMESTAMPTZ,
    vigente_hasta  TIMESTAMPTZ,
    publicada_en   TIMESTAMPTZ,
    revocada_en    TIMESTAMPTZ,
    -- Contrato del archivo original, que vive fuera de la base.
    ruta_relativa  TEXT    NOT NULL CHECK (btrim(ruta_relativa) <> ''),
    nombre_archivo TEXT    NOT NULL CHECK (btrim(nombre_archivo) <> ''),
    tipo_mime      TEXT    NOT NULL CHECK (btrim(tipo_mime) <> ''),
    tamano_bytes   BIGINT  NOT NULL CHECK (tamano_bytes > 0),
    sha256         TEXT    NOT NULL CHECK (sha256 ~ '^[0-9a-f]{64}$'),
    metadatos      JSONB   NOT NULL DEFAULT '{}'::jsonb,

    CONSTRAINT version_documental_numero_uk UNIQUE (documento_id, numero_version),
    CONSTRAINT version_documental_vigencia_ck
        CHECK (vigente_hasta IS NULL OR vigente_desde IS NULL
               OR vigente_hasta > vigente_desde),
    -- Un borrador no tiene vigencia; una versión publicada sí la tiene.
    CONSTRAINT version_documental_borrador_ck
        CHECK (estado <> 'borrador'
               OR (vigente_desde IS NULL AND publicada_en IS NULL)),
    CONSTRAINT version_documental_publicada_ck
        CHECK (estado = 'borrador'
               OR (vigente_desde IS NOT NULL AND publicada_en IS NOT NULL)),
    CONSTRAINT version_documental_revocada_ck
        CHECK ((estado = 'revocada') = (revocada_en IS NOT NULL)),
    -- Un documento no puede tener dos versiones publicadas vigentes a la vez.
    -- La exclusión es parcial: el historial (sustituida/revocada/borrador) queda
    -- fuera y por lo tanto puede solaparse sin bloquear la sustitución.
    CONSTRAINT version_documental_sin_solape_ex EXCLUDE USING gist (
        documento_id WITH =,
        tstzrange(vigente_desde, vigente_hasta, '[)') WITH &&
    ) WHERE (estado = 'publicada')
);

COMMENT ON TABLE version_documental IS
    'Versiones de un documento. Sólo una publicada, no revocada y vigente puede '
    'recuperarse en un instante dado; las demás se conservan como historial.';

COMMENT ON COLUMN version_documental.metadatos IS
    'JSONB acotado: metadatos variables que no se filtran ni autorizan.';

CREATE TABLE fragmento (
    id          BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    version_id  BIGINT  NOT NULL REFERENCES version_documental (id) ON DELETE RESTRICT,
    posicion    INTEGER NOT NULL CHECK (posicion > 0),
    titulo      TEXT    NOT NULL CHECK (btrim(titulo) <> ''),
    contenido   TEXT    NOT NULL CHECK (btrim(contenido) <> ''),
    pagina      INTEGER          CHECK (pagina IS NULL OR pagina > 0),
    CONSTRAINT fragmento_posicion_uk UNIQUE (version_id, posicion)
);

COMMENT ON TABLE fragmento IS
    'Unidad recuperable del corpus: una sección de una versión documental. '
    'Es lo único que se vectoriza.';

COMMENT ON COLUMN fragmento.contenido IS
    'Cuerpo propio de la sección. El texto vectorizado combina además el título '
    'del documento y el encabezado de la sección.';

CREATE TABLE embedding (
    id            BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    fragmento_id  BIGINT      NOT NULL REFERENCES fragmento        (id) ON DELETE RESTRICT,
    modelo_id     BIGINT      NOT NULL REFERENCES modelo_embedding (id) ON DELETE RESTRICT,
    vector        VECTOR(32)  NOT NULL,
    generado_en   TIMESTAMPTZ NOT NULL,
    CONSTRAINT embedding_fragmento_modelo_uk UNIQUE (fragmento_id, modelo_id)
);

COMMENT ON TABLE embedding IS
    'Un vector por fragmento y modelo. Un fragmento puede conservar vectores de '
    'modelos históricos, pero nunca dos del mismo modelo. La evidencia apunta '
    'al embedding exacto que participó en la respuesta.';

-- Asociaciones opcionales del documento con el núcleo operativo.
CREATE TABLE documento_producto (
    documento_id BIGINT NOT NULL REFERENCES documento (id) ON DELETE RESTRICT,
    producto_id  BIGINT NOT NULL REFERENCES producto  (id) ON DELETE RESTRICT,
    PRIMARY KEY (documento_id, producto_id)
);

CREATE TABLE documento_proveedor (
    documento_id BIGINT NOT NULL REFERENCES documento (id) ON DELETE RESTRICT,
    proveedor_id BIGINT NOT NULL REFERENCES proveedor (id) ON DELETE RESTRICT,
    PRIMARY KEY (documento_id, proveedor_id)
);


-- =============================================================================
-- 4. ACCESO
-- =============================================================================

CREATE TABLE actor (
    id                   BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    codigo               TEXT    NOT NULL UNIQUE CHECK (btrim(codigo) <> ''),
    nombre               TEXT    NOT NULL        CHECK (btrim(nombre) <> ''),
    perfil_autorizado_id BIGINT  NOT NULL REFERENCES perfil_autorizado (id) ON DELETE RESTRICT,
    activo               BOOLEAN NOT NULL DEFAULT TRUE,
    -- Habilita la FK compuesta desde `consulta`: garantiza que el perfil
    -- efectivo registrado sea exactamente el perfil del actor.
    CONSTRAINT actor_id_perfil_uk UNIQUE (id, perfil_autorizado_id)
);

COMMENT ON TABLE actor IS
    'Persona que consulta el copiloto. Pertenece a un único perfil y no guarda '
    'credenciales: la autenticación está fuera de alcance.';

CREATE TABLE permiso_documental (
    perfil_id BIGINT NOT NULL REFERENCES perfil_autorizado (id) ON DELETE RESTRICT,
    clase_id  BIGINT NOT NULL REFERENCES clase_documental  (id) ON DELETE RESTRICT,
    PRIMARY KEY (perfil_id, clase_id)
);

COMMENT ON TABLE permiso_documental IS
    'Matriz de autorización. La ausencia de fila significa acceso denegado: '
    'la denegación es por defecto y no existen excepciones individuales.';


-- =============================================================================
-- 5. INTERACCIÓN, EVIDENCIA Y AUDITORÍA
-- =============================================================================

CREATE TABLE consulta (
    id                 BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    actor_id           BIGINT      NOT NULL,
    perfil_efectivo_id BIGINT      NOT NULL,
    pregunta           TEXT        NOT NULL CHECK (btrim(pregunta) <> ''),
    instante           TIMESTAMPTZ NOT NULL,
    -- FK compuesta: el perfil efectivo no puede diferir del perfil del actor.
    CONSTRAINT consulta_actor_perfil_fk
        FOREIGN KEY (actor_id, perfil_efectivo_id)
        REFERENCES actor (id, perfil_autorizado_id) ON DELETE RESTRICT
);

COMMENT ON COLUMN consulta.perfil_efectivo_id IS
    'Perfil con el que se resolvió la consulta. La FK compuesta contra actor '
    'impide registrar un perfil que el actor no tiene: no hay delegación.';

CREATE TABLE respuesta (
    id              BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    consulta_id     BIGINT      NOT NULL UNIQUE REFERENCES consulta (id) ON DELETE RESTRICT,
    tipo_resultado  TEXT        NOT NULL
                    CHECK (tipo_resultado IN ('exito', 'sin_resultados',
                                              'sin_fuente_autorizada', 'acceso_denegado')),
    contenido       TEXT        NOT NULL CHECK (btrim(contenido) <> ''),
    instante        TIMESTAMPTZ NOT NULL
);

COMMENT ON TABLE respuesta IS
    'Cero o una respuesta por consulta. Una respuesta `exito` debe terminar la '
    'transacción con al menos una evidencia; los tipos negativos no llevan '
    'evidencia y declaran explícitamente por qué no hubo resultado.';

CREATE TABLE resultado_estructurado (
    id            BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    tipo_consulta TEXT        NOT NULL CHECK (btrim(tipo_consulta) <> ''),
    parametros    JSONB       NOT NULL DEFAULT '{}'::jsonb,
    contenido     JSONB       NOT NULL,
    generado_en   TIMESTAMPTZ NOT NULL,
    hash          TEXT        NOT NULL CHECK (hash ~ '^[0-9a-f]{64}$')
);

COMMENT ON TABLE resultado_estructurado IS
    'Snapshot inmutable del resultado de una consulta predefinida. `tipo_consulta` '
    'identifica una consulta del catálogo: no almacena ni habilita SQL arbitrario.';

CREATE TABLE evidencia_documental (
    id            BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    respuesta_id  BIGINT  NOT NULL REFERENCES respuesta (id) ON DELETE RESTRICT,
    embedding_id  BIGINT  NOT NULL REFERENCES embedding (id) ON DELETE RESTRICT,
    ranking       INTEGER NOT NULL CHECK (ranking > 0),
    score         NUMERIC(10, 8) NOT NULL,
    CONSTRAINT evidencia_documental_unica_uk  UNIQUE (respuesta_id, embedding_id),
    CONSTRAINT evidencia_documental_ranking_uk UNIQUE (respuesta_id, ranking)
);

COMMENT ON TABLE evidencia_documental IS
    'Fuente exacta que sostuvo la respuesta: apunta al embedding recuperado, no '
    'al documento en general, y conserva su posición y distancia.';

CREATE TABLE evidencia_estructurada (
    id                        BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    respuesta_id              BIGINT NOT NULL REFERENCES respuesta              (id) ON DELETE RESTRICT,
    resultado_estructurado_id BIGINT NOT NULL REFERENCES resultado_estructurado (id) ON DELETE RESTRICT,
    CONSTRAINT evidencia_estructurada_unica_uk
        UNIQUE (respuesta_id, resultado_estructurado_id)
);

CREATE TABLE evento_auditoria (
    id                 BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    actor_id           BIGINT      REFERENCES actor             (id) ON DELETE RESTRICT,
    perfil_efectivo_id BIGINT      REFERENCES perfil_autorizado (id) ON DELETE RESTRICT,
    instante           TIMESTAMPTZ NOT NULL,
    accion             TEXT        NOT NULL
                       CHECK (accion IN ('carga_borrador', 'publicacion', 'sustitucion',
                                         'revocacion', 'consulta_iniciada', 'acceso_denegado',
                                         'fragmento_recuperado', 'evidencia_utilizada',
                                         'respuesta_generada')),
    resultado          TEXT        NOT NULL
                       CHECK (resultado IN ('permitido', 'denegado', 'rechazado')),
    recurso_tipo       TEXT        NOT NULL CHECK (btrim(recurso_tipo) <> ''),
    recurso_id         BIGINT,
    consulta_id        BIGINT      REFERENCES consulta  (id) ON DELETE RESTRICT,
    respuesta_id       BIGINT      REFERENCES respuesta (id) ON DELETE RESTRICT,
    ranking            INTEGER     CHECK (ranking IS NULL OR ranking > 0),
    score              NUMERIC(10, 8),
    detalles           JSONB       NOT NULL DEFAULT '{}'::jsonb
);

COMMENT ON TABLE evento_auditoria IS
    'Registro append-only. No duplica el contenido de los documentos ni los '
    'vectores: sólo referencias, para no convertir la auditoría en una segunda '
    'copia de la información sensible.';

COMMENT ON COLUMN evento_auditoria.actor_id IS
    'Admite NULL: un intento con contexto ausente o inválido debe auditarse '
    'igual, aunque no haya un actor identificable.';


-- =============================================================================
-- 6. INVARIANTES TRANSACCIONALES
-- =============================================================================
--
-- Estas reglas dependen de varias filas y tablas. Los constraint triggers se
-- evalúan al cerrar la transacción para admitir el orden natural de carga: se
-- crea primero la cabecera y luego sus líneas o evidencias.
-- =============================================================================

CREATE OR REPLACE FUNCTION validar_pedido_con_lineas()
RETURNS TRIGGER
LANGUAGE plpgsql
AS $$
DECLARE
    v_pedido_id BIGINT;
    v_pedidos BIGINT[];
BEGIN
    IF TG_TABLE_NAME = 'pedido' THEN
        v_pedidos := ARRAY[NEW.id];
    ELSIF TG_OP = 'INSERT' THEN
        v_pedidos := ARRAY[NEW.pedido_id];
    ELSIF TG_OP = 'DELETE' THEN
        v_pedidos := ARRAY[OLD.pedido_id];
    ELSE
        v_pedidos := ARRAY[NEW.pedido_id, OLD.pedido_id];
    END IF;

    FOR v_pedido_id IN
        SELECT DISTINCT id FROM unnest(v_pedidos) AS ids(id)
    LOOP
        IF EXISTS (SELECT 1 FROM pedido WHERE id = v_pedido_id)
           AND NOT EXISTS (
               SELECT 1 FROM linea_pedido WHERE pedido_id = v_pedido_id
           ) THEN
            RAISE EXCEPTION 'el pedido % debe tener al menos una línea', v_pedido_id
                USING ERRCODE = '23514';
        END IF;
    END LOOP;

    RETURN NULL;
END;
$$;

CREATE CONSTRAINT TRIGGER pedido_con_lineas_desde_pedido_tg
    AFTER INSERT OR UPDATE ON pedido
    DEFERRABLE INITIALLY DEFERRED
    FOR EACH ROW
    EXECUTE FUNCTION validar_pedido_con_lineas();

CREATE CONSTRAINT TRIGGER pedido_con_lineas_desde_linea_tg
    AFTER INSERT OR UPDATE OR DELETE ON linea_pedido
    DEFERRABLE INITIALLY DEFERRED
    FOR EACH ROW
    EXECUTE FUNCTION validar_pedido_con_lineas();

CREATE OR REPLACE FUNCTION validar_evidencia_respuesta()
RETURNS TRIGGER
LANGUAGE plpgsql
AS $$
DECLARE
    v_respuesta_id BIGINT;
    v_respuestas BIGINT[];
    v_tipo_resultado TEXT;
    v_cantidad_evidencias BIGINT;
BEGIN
    IF TG_TABLE_NAME = 'respuesta' THEN
        v_respuestas := ARRAY[NEW.id];
    ELSIF TG_OP = 'INSERT' THEN
        v_respuestas := ARRAY[NEW.respuesta_id];
    ELSIF TG_OP = 'DELETE' THEN
        v_respuestas := ARRAY[OLD.respuesta_id];
    ELSE
        v_respuestas := ARRAY[NEW.respuesta_id, OLD.respuesta_id];
    END IF;

    FOR v_respuesta_id IN
        SELECT DISTINCT id FROM unnest(v_respuestas) AS ids(id)
    LOOP
        SELECT tipo_resultado
          INTO v_tipo_resultado
          FROM respuesta
         WHERE id = v_respuesta_id;

        IF NOT FOUND THEN
            CONTINUE;
        END IF;

        SELECT
            (SELECT count(*) FROM evidencia_documental
             WHERE respuesta_id = v_respuesta_id)
          + (SELECT count(*) FROM evidencia_estructurada
             WHERE respuesta_id = v_respuesta_id)
          INTO v_cantidad_evidencias;

        IF v_tipo_resultado = 'exito' AND v_cantidad_evidencias = 0 THEN
            RAISE EXCEPTION 'la respuesta exitosa % debe tener evidencia',
                v_respuesta_id
                USING ERRCODE = '23514';
        ELSIF v_tipo_resultado <> 'exito' AND v_cantidad_evidencias > 0 THEN
            RAISE EXCEPTION 'la respuesta negativa % no puede tener evidencia',
                v_respuesta_id
                USING ERRCODE = '23514';
        END IF;
    END LOOP;

    RETURN NULL;
END;
$$;

CREATE CONSTRAINT TRIGGER respuesta_evidencia_desde_respuesta_tg
    AFTER INSERT OR UPDATE ON respuesta
    DEFERRABLE INITIALLY DEFERRED
    FOR EACH ROW
    EXECUTE FUNCTION validar_evidencia_respuesta();

CREATE CONSTRAINT TRIGGER respuesta_evidencia_documental_tg
    AFTER INSERT OR UPDATE OR DELETE ON evidencia_documental
    DEFERRABLE INITIALLY DEFERRED
    FOR EACH ROW
    EXECUTE FUNCTION validar_evidencia_respuesta();

CREATE CONSTRAINT TRIGGER respuesta_evidencia_estructurada_tg
    AFTER INSERT OR UPDATE OR DELETE ON evidencia_estructurada
    DEFERRABLE INITIALLY DEFERRED
    FOR EACH ROW
    EXECUTE FUNCTION validar_evidencia_respuesta();

COMMIT;
